# raman-peaks

./: .gitignore  README.md  pyproject.toml  requirements.txt
.bolt/: mcp.json
.cache/pylint/: raman_peaks_1.stats
.github/workflows/: pylint.yml
src/raman_peaks/: __init__.py  analysis.py  cli.py  fitting.py  io_utils.py  plotting.py  preprocessing.py  streamlit_app.py
