[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raman-peaks"
version = "0.1.0"
description = "Raman spectrum peak detection and top-fraction fitting"
authors = [{name = "Codex", email = ""}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "streamlit>=1.32",
]

[project.scripts]
raman-peaks = "raman_peaks.cli:main"
raman-peaks-app = "raman_peaks.streamlit_app:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}
